--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -326,6 +326,13 @@
   clip: rect(0, 0, 0, 0);
   border: 0; }
 
+.elementor-clearfix:after {
+  content: '';
+  display: block;
+  clear: both;
+  width: 0;
+  height: 0; }
+
 .elementor-widget-heading .elementor-heading-title {
   padding: 0;
   margin: 0;
