--- a/assets/dev/scss/editor/panel/_control.scss
+++ b/assets/dev/scss/editor/panel/_control.scss
@@ -504,14 +504,6 @@
 		}
 	}
 
-	// Slider control
-	.elementor-control-type-slider {
-
-		.elementor-control-input-wrapper {
-			overflow: hidden;
-		}
-	}
-
 	// Section control
 	.elementor-control-type-section {
 		margin-top: 10px;
